# osiris

./: .gitignore  README.md  pyproject.toml
.build/: __local__.json
.github/workflows/: onpush.yml  onrelease.yml
examples/: preprocessed_image.npy
osiris/: app.py
osiris/cairo/data_converter/: data_converter.py  data_statement_generator.py  tensor_creator.py
osiris/cairo/file_manager/: cairo_data.py  file.py
osiris/cairo/serde/: data_structures.py  deserialize.py  serialize.py  utils.py
osiris/dtypes/: cairo_dtypes.py  cairo_impls.py  input_output_formats.py
tests/: test_convert_to_numpy.py  test_deserialize.py  test_deserialize2.py  test_serialize.py
tests/data/: simple_tensor.npy  simple_tensor.parquet
