[tool.poetry]
name = "osiris"
version = "0.1.0"
description = ""
authors = ["Fran Algaba <f.algaba@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
typer = {extras = ["all"], version = "^0.9.0"}
polars = {extras = ["pyarrow"], version = "^0.19.16"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osiris = "osiris.app:app"

